# shield-messenger

./: .gitignore  ANDROID_BUILD_SUCCESS.md  C:UsersEddieAndroidStudioProjectsSecureLegioncrash_log.txt  CHANGELOG-SECURITY.md  CHANGELOG.md  CHANGELOG_v0.1.4.md  CHANGELOG_v0.1.5.md  CHANGELOG_v0.2.0.md  CHANGELOG_v0.2.1.md  CONTRIBUTING.md  CUsersEddieAndroidStudioProjectsSecureLegioncrash_log.txt  Dockerfile  Dockerfile.core  LICENSE  PING_PONG_IMPLEMENTATION.md  PING_PONG_PROTOCOL_SIMPLE.txt  PROTOCOL_README.md  QUICKSTART.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  VOICE_MESSAGES_IMPLEMENTATION.md  WALLET_DATABASE_SECURITY_AUDIT.md  build-and-install.bat  build-debug.bat  crash_log.txt  docker-compose.yml  gradle.properties  install-debug.bat  nginx-shieldmessenger.conf  pr5_body.md  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml  deploy-web.yml  fuzz.yml  reproducible.yml
app/: build.gradle.kts  keystore.properties.example  proguard-rules.pro
app/src/main/: AndroidManifest.xml
deploy/: README.md  nginx.conf  shieldmessenger.conf.example
docs/: AETHERNET.md  ANDROID_ARCHITECTURE.md  ARCHITECTURE.md  GOOGLE_PLAY_DATA_SAFETY.md  PROTOCOL.md  REPRODUCIBLE_BUILDS.md  TOR_DOS_PROTECTION.md  VISION.md  WHITEPAPER.md  arti-migration.md  nix-reproducible.md  protocol.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios-app/: generate-icon.ps1
ios-app/ShieldMessenger/: App.tsx  app.json  package-lock.json  package.json
ios-app/ShieldMessenger/android/: settings.gradle
ios-app/ShieldMessenger/docs/: BUILD_IOS.md
ios-app/ShieldMessenger/ios/: Podfile
ios-app/ShieldMessenger/scripts/: build-rust-ios.sh
ios/SecureLegion/: Package.swift
ios/SecureLegion/Sources/: SecureLegionApp.swift
ios/ShieldMessenger/: Package.swift
ios/ShieldMessenger/Sources/: ShieldMessengerApp.swift
relay/: package.json  server.js
scripts/: all_strings.txt  build_wasm.sh  extract_strings.js  fix_activities.js  generate_translations.js  list_missing.js  strings_map.json
secure-legion-core/: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  Cargo.toml  README.md  build.rs  build_android.bat  build_android.sh  build_ios.sh  build_wasm.sh  deny.toml
secure-legion-core/.cargo/: config.toml
secure-legion-core/fuzz/: Cargo.toml
secure-legion-core/fuzz/fuzz_targets/: fuzz_backup.rs  fuzz_contact_verification.rs  fuzz_dos_protection.rs  fuzz_encrypt_decrypt.rs  fuzz_hybrid_kem.rs  fuzz_key_exchange.rs  fuzz_packet.rs  fuzz_padding.rs  fuzz_ratchet.rs  fuzz_safety_number.rs
secure-legion-core/src/: lib.rs
secure-legion-core/src/audio/: loss_adaptive_fec.rs  mod.rs  opus.rs  opus_ctl.rs  voice_latency_bench.rs  voice_streaming.rs
secure-legion-core/src/blockchain/: sns.rs
secure-legion-core/src/crdt/: apply.rs  ids.rs  membership.rs  messages.rs  metadata.rs  mod.rs  ops.rs
secure-legion-core/src/crypto/: ack_state.rs  backup.rs  constant_time.rs  deadman.rs  duress.rs  encryption.rs  hashing.rs  key_exchange.rs  mod.rs  pq_ratchet.rs  pqc.rs  ratchet.rs  replay_cache.rs  signing.rs  zkproofs.rs
secure-legion-core/src/crypto/pqc/: hybrid_kem.rs  mod.rs  types.rs
secure-legion-core/src/ffi/: android.rs  crdt.rs  ios.rs  keystore.rs  mod.rs  wasm.rs
secure-legion-core/src/network/: arti.rs  friend_request_server.rs  mod.rs  packet.rs  padding.rs  pingpong.rs  socks5_client.rs  tor.rs  tor_dos_protection.rs
secure-legion-core/src/nlx402/: mod.rs  quote.rs
secure-legion-core/src/protocol/: contact.rs  message.rs  mod.rs  security_mode.rs
secure-legion-core/src/storage/: mod.rs
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: config.ts  index.ts  logger.ts
server/src/db/: connection.ts  migrate.ts
server/src/middleware/: audit.ts  auth.ts  rateLimit.ts
server/src/routes/: admin.ts  analytics.ts  billing.ts  cms.ts  discovery.ts  support.ts
server/src/utils/: crypto.ts  validate.ts
server/tests/: helpers.ts  setup.ts
server/tests/integration/: api.test.ts  database.test.ts
server/tests/unit/: auth.test.ts  config.test.ts  crypto.test.ts  validate.test.ts
shared/types/: protocol.schema.json
shield-messenger-core/: .gitignore  Cargo.toml  README.md  build.rs  build_android.sh  build_ios.sh  build_wasm.sh  cmake-wrapper-armv7.cmd  cmake-wrapper-x86_64.cmd  cmake-wrapper.cmd  deny.toml
shield-messenger-core/.cargo/: config.toml
shield-messenger-core/fuzz/: Cargo.toml
shield-messenger-core/fuzz/fuzz_targets/: fuzz_backup.rs  fuzz_contact_verification.rs  fuzz_dos_protection.rs  fuzz_encrypt_decrypt.rs  fuzz_hybrid_kem.rs  fuzz_key_exchange.rs  fuzz_packet.rs  fuzz_padding.rs  fuzz_ratchet.rs  fuzz_safety_number.rs
shield-messenger-core/src/: lib.rs
shield-messenger-core/src/aethernet/: crisis.rs  crowd_mesh.rs  i2p_transport.rs  identity_vault.rs  mesh_transport.rs  mod.rs  solidarity.rs  store_forward.rs  switcher.rs  tor_transport.rs  transport.rs  trust_map.rs
shield-messenger-core/src/audio/: adaptive_codec.rs  denoise.rs  loss_adaptive_fec.rs  mod.rs  opus.rs  voice_latency_bench.rs  voice_streaming.rs
shield-messenger-core/src/ffi/: android.rs  crdt.rs  ios.rs  keystore.rs  wasm.rs
shield-messenger-core/src/network/: arti.rs  friend_request_server.rs  mod.rs  sleep_mode.rs  socks5_client.rs  tor.rs  (+1 more)
shield-protocol/: .gitignore  Cargo.toml  README.md
shield-protocol/src/: lib.rs
shield-protocol/src/crdt/: apply.rs  limits.rs  membership.rs  mod.rs  ops.rs
shield-protocol/src/crypto/: duress.rs  encryption.rs  mod.rs  pq_ratchet.rs  ratchet.rs  signing.rs
shield-protocol/src/protocol/: contact.rs  message.rs  mod.rs
shield-protocol/src/transport/: mod.rs  padding.rs
tests/: voice_call_simulation.py
web/: README.md  index.html  nginx-shieldmessenger.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/public/: manifest.json  sw.js
web/src/: App.tsx  main.tsx
web/tests/: setup.ts
web/wasm/: securelegion.js  shieldmessenger.js
(+936 files in other folders)
