[package]
name = "securelegion"
version = "1.0.0"
edition = "2021"
authors = ["Secure Legion Team"]
description = "Secure Legion core library - Privacy-focused messaging with zero metadata"

[lib]
name = "securelegion"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["custom"] }
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
blake3 = "1.5"  # For PING hashing and replay detection
subtle = "2.5"  # For constant-time comparison
bulletproofs = "5.0.0"  # Bulletproof range proofs for ShadowWire ZK transfers
curve25519-dalek = { version = "4", features = ["rand_core"] }  # Required by bulletproofs for Scalar/Ristretto types
merlin = "3"  # Transcript protocol for bulletproofs

# Post-Quantum Cryptography (NIST FIPS 203)
pqc_kyber = { version = "0.7", features = ["kyber1024"] }  # ML-KEM-1024 implementation
rand_chacha = "0.3"  # For deterministic RNG from seed

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde-big-array = "0.5"
ciborium = "0.2"  # CBOR encoding for CRDT op payloads

# Encoding
bs58 = "0.5"
base64 = "0.21"
hex = "0.4"
base32 = "0.5"

# JNI (Android)
jni = "0.21"

# Audio codec - Opus for voice calling
opus = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
android_logger = "0.14"

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Sync primitives
once_cell = "1.19"
lru = "0.12"  # For replay cache (LRU eviction policy)

# Async runtime (for Ping-Pong protocol and Tor control)
tokio = { version = "1.35", features = ["sync", "time", "macros", "rt-multi-thread", "net", "io-util", "process", "io-std"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Tor integration (C Tor via subprocess + control port)
# Note: Arti removed - using C Tor from tor-android library
# Control port and SOCKS5 will be implemented directly

# Networking (optional - for future Tor/P2P implementation)
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std"]
std = []
network = ["reqwest"]
debug-logs = []  # Enable verbose logging for development builds

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
