[package]
name = "securelegion"
version = "1.0.0"
edition = "2021"
authors = ["Secure Legion Team"]
description = "Secure Legion core library - Privacy-focused messaging with zero metadata"

[lib]
name = "securelegion"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2" }
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
blake3 = "1.5"  # For PING hashing and replay detection
subtle = "2.5"  # For constant-time comparison
bulletproofs = "5.0.0"  # Bulletproof range proofs for ZK transfers
curve25519-dalek = { version = "4", features = ["rand_core"] }  # Required by bulletproofs for Scalar/Ristretto types
merlin = "3"  # Transcript protocol for bulletproofs

# Post-Quantum Cryptography (NIST FIPS 203)
pqc_kyber = { version = "0.7", features = ["kyber1024"] }  # ML-KEM-1024 implementation
rand_chacha = "0.3"  # For deterministic RNG from seed

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde-big-array = "0.5"
ciborium = { version = "0.2", optional = true }  # CBOR encoding for CRDT op payloads

# Encoding
bs58 = "0.5"
base64 = "0.21"
hex = "0.4"
base32 = "0.5"

# JNI (Android)
jni = { version = "0.21", optional = true }

# WASM (Web)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Audio codec - Opus for voice calling (not available on WASM)
opus = { version = "0.3", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
android_logger = { version = "0.14", optional = true }

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Sync primitives
once_cell = "1.19"
lru = "0.12"  # For replay cache (LRU eviction policy)

# Async runtime (for Ping-Pong protocol and Tor control) - not on WASM
tokio = { version = "1.35", features = ["sync", "time", "macros", "rt-multi-thread", "net", "io-util", "process", "io-std"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1.5", optional = true }

# Tor: currently C Tor via tor-android (SOCKS5 + ControlSocket).
# Optional Arti (Rust Tor) for future: add arti-client under feature "arti". See docs/arti-migration.md.

# Networking (optional - for future Tor/P2P implementation)
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std", "native"]
std = []
native = ["tokio", "tokio-util", "bytes", "ciborium"]
audio-codec = ["opus"]
android = ["native", "jni", "android_logger"]
ios = ["native"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "getrandom/js"]
network = ["reqwest"]
# arti = ["arti-client"]  # Future: embed Arti (Rust Tor). See docs/arti-migration.md.
debug-logs = []  # Enable verbose logging for development builds

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
